# bobdock

./: README.md  meson.build
data/: Application.css  io.github.trbjo.bobdock.gresource.xml  io.github.trbjo.bobdock.gschema.xml
resources/: bobdock.service
src/: appitem.vala  appsettings.vala  background.vala  badge.vala  content_popover.vala  css_functions.vala  desktop-connector.vala  dock.vala  dockitem.vala  dotindicator.vala  folderitem.vala  icon.vala  interfaces.vala  item-container.vala  main.vala  paintable_wrapper.vala  popup-manager.vala  splitter-item.vala  sway-connector.vala  sway-ipc.vala  thumbnail.vala  trashitem.vala  utils.vala  window-item.vala  window.vala
